Fix responsive design on mobile browsers

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,6 @@
 .btn-search:active, .btn-search:focus, .btn-search:visited, .btn-search:target {
   background-color: #79BD9A !important;
 }
-.btn-search, .input-search {
+.btn-search, .artist-search {
   font-size: 2rem;
 }
